testsuite/tests/typecheck/should_fail/T5853.stderr

T5853.hs:15:46: error:
    • Could not deduce: Subst fa (Elem fb) ~ fb
        arising from a use of ‘<$>’
      from the context: (F (Subst fb a),
                         Elem (Subst fb a) ~ a,
                         Elem fb ~ Elem fb,
                         Subst (Subst fb a) (Elem fb) ~ fb,
                         Subst fb a ~ Subst fb a,
                         F fa,
                         Elem fa ~ Elem fa,
                         Elem (Subst fb a) ~ a,
                         Subst fa a ~ Subst fb a,
                         Subst (Subst fb a) (Elem fa) ~ fa)
        bound by the RULE "map/map" at T5853.hs:15:2-57
      ‘fb’ is a rigid type variable bound by
        the RULE "map/map" at T5853.hs:15:2-57
    • In the expression: (f . g) <$> xs
      When checking the transformation rule "map/map"
    • Relevant bindings include
        f :: a -> Elem fb (bound at T5853.hs:15:19)
        g :: Elem fa -> a (bound at T5853.hs:15:21)
        xs :: fa (bound at T5853.hs:15:23)
